Fixed flex-wrap property value

--- a/src/components/layout/Partner/index.module.css
+++ b/src/components/layout/Partner/index.module.css
@@ -14,7 +14,7 @@
 .btns {
   display: flex;
   place-content: center;
-  flex-wrap: no-wrap;
+  flex-wrap: nowrap;
   gap: 1rem;
 }
 .btns .copy {
